# smol-file

./: .gitignore  Cargo.toml  README.md  test.txt
src/: lib.rs  main.rs  smolblob.rs  utils.rs
