[package]
name = "smol-file"
version = "0.1.0"
edition = "2021"

license = "GPL-3.0"
description = "5-bit letter encoding"
repository = "https://github.com/ReeZey/smol-file/"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
leb128 = "0.2"
anyhow = "1"